--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </p>
        <button class="btn-primary">How to Contribute?</button>
       </div>
-      <img  class="donationimg" src="/images/donation0.jpg" alt="">
+      <img  class="donationimg" src="images/donation0.jpg" alt="donationimg">
       </div>
     
 
@@ -137,7 +137,7 @@
       <!-- suvive -->
 
           <div class="donation ">
-            <img  class="donationimg" src="/images/donation2.jpg" alt="">
+            <img  class="donationimg" src="images/donation2.jpg" alt="donationimg">
       <div class="contenet">
       <h3 class="title">They need us to suvive</h3>
       <p class="description">
