--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="donatecetagory">
       <div class="donteitem1">
-        <img src="/icons/food.png" alt="" class="icon">
+        <img src="icons/food.png" alt="" class="icon">
           <h6 class="title">
             Food for a family
           </h6>
@@ -90,7 +90,7 @@
       </div>
 
       <div class="donteitem2">
-        <img src="/icons/shelter.png" alt="" class="icon">
+        <img src="icons/shelter.png" alt="" class="icon">
           <h6 class="title">
             Shelter for a family
           </h6>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="donteitem3">
-        <img src="/icons/Frame-1.png" alt="" class="icon">
+        <img src="icons/Frame-1.png" alt="" class="icon">
           <h6 class="title">
            Education for a child
           </h6>
